objects/LLC_BI__Fee_Loan_Aggregate__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Borrower_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total number of borrower fees associated to this object.</description>
        <inlineHelpText>The total number of borrower fees associated to this object.</inlineHelpText>
        <label>Number of Borrower Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Cash_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total number of cash fees associated to this object.</description>
        <inlineHelpText>The total number of cash fees associated to this object.</inlineHelpText>
        <label>Number of Cash Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan  This field represents the total number of fees associated to this object.</description>
        <inlineHelpText>The total number of fees associated to this object.</inlineHelpText>
        <label>Number of Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Financed_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total number of financed fees associated to this object.</description>
        <inlineHelpText>The total number of financed fees associated to this object.</inlineHelpText>
        <label>Number of Financed Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Lender_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represent the total number of lender fees associated to this object.</description>
        <inlineHelpText>The total number of lender fees associated to this object.</inlineHelpText>
        <label>Number of Lender Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Nonstandard_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represent the total number of nonstandard fees associated to this object.</description>
        <inlineHelpText>The total number of nonstandard fees associated to this object.</inlineHelpText>
        <label>Number of Nonstandard Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Seller_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total number of seller fees associated to this object.</description>
        <inlineHelpText>The total number of seller fees associated to this object.</inlineHelpText>
        <label>Number of Seller Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Standard_Fees__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total number of standard fees associated to this object.</description>
        <inlineHelpText>The total number of standard fees associated to this object.</inlineHelpText>
        <label>Number of Standard Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Borrower_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of borrower fees associated to the object.</description>
        <inlineHelpText>The total amount of borrower fees associated to the object.</inlineHelpText>
        <label>Total Borrower Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Cash_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of cash fees associated to the object.</description>
        <inlineHelpText>The total amount of cash fees associated to the object.</inlineHelpText>
        <label>Total Cash Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Fee_Amount_Outstanding__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total fee amount minus the total fee amount paid.</description>
        <formula>LLC_BI__Total_Fee_Amount__c - LLC_BI__Total_Fee_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total fee amount minus the total fee amount paid.</inlineHelpText>
        <label>Total Fee Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Fee_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount paid for fees related to this object.</description>
        <inlineHelpText>The total amount paid for fees related to this object.</inlineHelpText>
        <label>Total Fee Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated when fees are added to the loan.  This field represents the total Amount of all fees associated to this object.</description>
        <inlineHelpText>Total Amount of all fees associated to this object.</inlineHelpText>
        <label>Total Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Financed_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of financed fees associated to the object.</description>
        <inlineHelpText>The total amount of financed fees associated to the object.</inlineHelpText>
        <label>Total Financed Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Lender_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of lender fees associated to the object.</description>
        <inlineHelpText>The total amount of lender fees associated to the object.</inlineHelpText>
        <label>Total Lender Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Nonstandard_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of nonstandard fees associated to the object.</description>
        <inlineHelpText>The total amount of nonstandard fees associated to the object.</inlineHelpText>
        <label>Total Nonstandard Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Seller_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of seller fees associated to the object.</description>
        <inlineHelpText>The total amount of seller fees associated to the object.</inlineHelpText>
        <label>Total Seller Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Standard_Fee_Amount__c</fullName>
        <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of standard fees associated to the object.</description>
        <inlineHelpText>The total amount of standard fees associated to the object.</inlineHelpText>
        <label>Total Standard Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This is an optional field that is used to specify an external, unique key for this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Origination_Charges__c</fullName>
        <label>Origination Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_You_Can_Shop_For__c</fullName>
        <label>Services You Can Shop For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Services_You_Cannot_Shop_For__c</fullName>
        <label>Services You Cannot Shop For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Other__c</fullName>
        <label>Total Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_services_you_can_shop_for_amount__c</fullName>
        <defaultValue>1875</defaultValue>
        <label>Total services you can shop for amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_services_you_canno_shop_for_amount__c</fullName>
        <defaultValue>613</defaultValue>
        <label>Total services you canno shop for</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fee Loan Aggregate</label>
    <nameField>
        <label>Fee Loan Aggregate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Loan Aggregate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>